# remove-empty-ns

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  mise.toml  pyproject.toml
kustomize/: kustomization.yaml  settings.yaml
kustomize/base/: cronjob.yaml  namespace.yaml  rbac.yaml
src/: app.py
tests/: tests.py
